@@ -134,6 +134,8 @@
               <argLine>
                 --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
                 --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+
+                --add-reads com.azure.core.test=ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
